@@ -1,0 +1,18 @@
+<html>
+  <head>
+    <title>Refount</title>
+  </head>
+  <body>
+    <h1>Refcount</h1>
+    <table>
+      <tr>
+        <td>Class</td>
+        <td>Refcount</td>
+      </tr>
+      <tr tal:repeat="rc view/refcount">
+        <td tal:content="rc/name" />
+        <td tal:content="rc/count" />
+      </tr>
+    </table>
+  </body>
+</html>
